# OneMatrix

./: .clang-format3  .gitignore  CMakeLists.txt  README.md  build.ps1  codesnippets.txt  conanfile.py  run.bat
lib/matrix/: CMakeLists.txt  matrix.h
pseudo_codes/: gqv.pseudo
src/: main.cpp  matrix.h  test.hpp
src/aero/: CMakeLists.txt  aero.cpp
src/aero/include/: aero.h
src/core/: vlm.cpp
src/core/include/: vlm.h
